--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 	path = fel_megaprint
 	url = git@github.com:rocketgithub/fel_megaprint.git
 	branch = 13.0
+[submodule "aluver"]
+	path = aluver
+	url = git@github.com:rocketgithub/aluver.git
