--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,14 @@
 [submodule "hr_expense_invoice"]
 	path = hr_expense_invoice
 	url = git@github.com:rocketgithub/hr_expense_invoice.git
+[submodule "aluver"]
+	path = aluver
+	url = git@github.com:rocketgithub/aluver.git
+[submodule "fel_gt"]
+	path = fel_gt
+	url = git@github.com:aquih/fel_gt.git
+	branch = 17.0
+[submodule "fel_megaprint"]
+	path = fel_megaprint
+	url = git@github.com:aquih/fel_megaprint.git
+	branch = 17.0
